@@ -58,6 +58,12 @@
       <AdditionalDependencies>curl/libcurl_imp.lib;sqlite/sqlite3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <UACExecutionLevel>AsInvoker</UACExecutionLevel>
     </Link>
+    <PreBuildEvent>
+      <Command>SubWCRev . svntemplate.txt svnversion.h</Command>
+    </PreBuildEvent>
+    <PreBuildEvent>
+      <Message>Getting subversion revision</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -82,6 +88,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="CMakeLists.txt" />
+    <None Include="getsvn.cmake" />
     <None Include="main\domoticz.ico" />
     <None Include="History.txt" />
     <None Include="INSTALL.txt" />
